Compiladores/Compilador/parte2/sintatico.output
Nonterminals useless in grammar

    escrita
    repeticao
    selecao
    atribuicao
    expressao
    termo


Terminals unused in grammar

    T_ESCERVA
    T_ENQTO
    T_FACA
    T_FIMENQTO
    T_SE
    T_ENTAO
    T_SENAO
    T_FIMSE
    T_ATRIB
    T_VEZES
    T_DIV
    T_MAIS
    T_MENOS
    T_MAIOR
    T_MENOR
    T_iGUAL
    T_E
    T_OU
    T_V
    T_F
    T_NUMERO
    T_NAO
    T_ABRE
    T_FECHA
    T_IGUAL


Rules useless in grammar

   15 comando: escrita
   16        | repeticao
   17        | selecao
   18        | atribuicao

   19 escrita: T_ESCERVA expressao

   20 repeticao: T_ENQTO expressao T_FACA lista_comandos T_FIMENQTO

   21 selecao: T_SE expressao T_ENTAO lista_comandos T_SENAO lista_comandos T_FIMSE

   22 atribuicao: T_IDENTIF T_ATRIB expressao

   23 expressao: expressao T_VEZES expressao
   24          | expressao T_DIV expressao
   25          | expressao T_MAIS expressao
   26          | expressao T_MENOS expressao
   27          | expressao T_MAIOR expressao
   28          | expressao T_MENOR expressao
   29          | expressao T_iGUAL expressao
   30          | expressao T_E expressao
   31          | expressao T_OU expressao

   32 termo: T_IDENTIF
   33      | T_NUMERO
   34      | T_V
   35      | T_F
   36      | T_NAO termo
   37      | T_ABRE expressao T_FECHA


State 6 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM

    2 cabecalho: T_PROGRAMA T_IDENTIF

    3 variaveis: ε
    4          | declaracao_variaveis

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    6                     | lista_variaveis

    7 tipo: T_LOGICO
    8     | T_INTEIRO

    9 lista_variaveis: T_IDENTIF lista_variaveis
   10                | T_IDENTIF

   11 lista_comandos: ε
   12               | comando lista_comandos

   13 comando: leitura

   14 leitura: T_LEIA T_IDENTIF


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 2
    T_INICIO (259) 1
    T_FIM (260) 1
    T_IDENTIF (261) 2 9 10 14
    T_LEIA (262) 14
    T_ESCERVA (263)
    T_ENQTO (264)
    T_FACA (265)
    T_FIMENQTO (266)
    T_SE (267)
    T_ENTAO (268)
    T_SENAO (269)
    T_FIMSE (270)
    T_ATRIB (271)
    T_VEZES (272)
    T_DIV (273)
    T_MAIS (274)
    T_MENOS (275)
    T_MAIOR (276)
    T_MENOR (277)
    T_iGUAL (278)
    T_E (279)
    T_OU (280)
    T_V (281)
    T_F (282)
    T_NUMERO (283)
    T_NAO (284)
    T_ABRE (285)
    T_FECHA (286)
    T_LOGICO (287) 7
    T_INTEIRO (288) 8
    T_IGUAL (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    programa (36)
        on left: 1
        on right: 0
    cabecalho (37)
        on left: 2
        on right: 1
    variaveis (38)
        on left: 3 4
        on right: 1
    declaracao_variaveis (39)
        on left: 5 6
        on right: 4 5
    tipo (40)
        on left: 7 8
        on right: 5
    lista_variaveis (41)
        on left: 9 10
        on right: 5 6 9
    lista_comandos (42)
        on left: 11 12
        on right: 1 12
    comando (43)
        on left: 13
        on right: 12
    leitura (44)
        on left: 14
        on right: 13


State 0

    0 $accept: • programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    2 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa • $end

    $end  shift, and go to state 5


State 3

    1 programa: cabecalho • variaveis T_INICIO lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 6
    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    $default  reduce using rule 3 (variaveis)

    variaveis             go to state 9
    declaracao_variaveis  go to state 10
    tipo                  go to state 11
    lista_variaveis       go to state 12


State 4

    2 cabecalho: T_PROGRAMA T_IDENTIF •

    $default  reduce using rule 2 (cabecalho)


State 5

    0 $accept: programa $end •

    $default  accept


State 6

    9 lista_variaveis: T_IDENTIF • lista_variaveis
   10                | T_IDENTIF •

    T_IDENTIF  shift, and go to state 6

    T_IDENTIF  [reduce using rule 10 (lista_variaveis)]
    $default   reduce using rule 10 (lista_variaveis)

    lista_variaveis  go to state 13


State 7

    7 tipo: T_LOGICO •

    $default  reduce using rule 7 (tipo)


State 8

    8 tipo: T_INTEIRO •

    $default  reduce using rule 8 (tipo)


State 9

    1 programa: cabecalho variaveis • T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 14


State 10

    4 variaveis: declaracao_variaveis •

    $default  reduce using rule 4 (variaveis)


State 11

    5 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis

    T_IDENTIF  shift, and go to state 6

    lista_variaveis  go to state 15


State 12

    6 declaracao_variaveis: lista_variaveis •

    $default  reduce using rule 6 (declaracao_variaveis)


State 13

    9 lista_variaveis: T_IDENTIF lista_variaveis •

    $default  reduce using rule 9 (lista_variaveis)


State 14

    1 programa: cabecalho variaveis T_INICIO • lista_comandos T_FIM

    T_LEIA  shift, and go to state 16

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 17
    comando         go to state 18
    leitura         go to state 19


State 15

    5 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis

    T_IDENTIF  shift, and go to state 6
    T_LOGICO   shift, and go to state 7
    T_INTEIRO  shift, and go to state 8

    declaracao_variaveis  go to state 20
    tipo                  go to state 11
    lista_variaveis       go to state 12


State 16

   14 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  shift, and go to state 21


State 17

    1 programa: cabecalho variaveis T_INICIO lista_comandos • T_FIM

    T_FIM  shift, and go to state 22


State 18

   12 lista_comandos: comando • lista_comandos

    T_LEIA  shift, and go to state 16

    $default  reduce using rule 11 (lista_comandos)

    lista_comandos  go to state 23
    comando         go to state 18
    leitura         go to state 19


State 19

   13 comando: leitura •

    $default  reduce using rule 13 (comando)


State 20

    5 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $default  reduce using rule 5 (declaracao_variaveis)


State 21

   14 leitura: T_LEIA T_IDENTIF •

    $default  reduce using rule 14 (leitura)


State 22

    1 programa: cabecalho variaveis T_INICIO lista_comandos T_FIM •

    $default  reduce using rule 1 (programa)


State 23

   12 lista_comandos: comando lista_comandos •

    $default  reduce using rule 12 (lista_comandos)
